[package]
name = "re_zero_rust_back"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "re_zero_rust_back"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12.7"

