[package]
name = "re_zero_rust_back"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "re_zero_rust_back"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
config = "0.13"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }

[dev-dependencies]
reqwest = "0.12.7"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
